--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -615,11 +615,28 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
-@media only screen and (max-width: 480px) {
+
+@media screen and (max-width: 2000) {
+  
+  #phoneNumber {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
   html {
     font-size: 100%;
   }
   #headerLogo {
     margin-top: -15px !important;
+  }
+  #phoneDiv {
+    border-radius: 50%;
+  }
+  #phoneNumber {
+    display: none;
+  }
+  #phoneIcon {
+    display: block !important;
   }
 }
